# VechainEasyAHackathon

./: .gitignore  commands.txt  config.json  deno.json  design.md  fresh.gen.ts  hardhat.config.js  package-lock.json  package.json  text.txt
islands/: ChainSubmit.tsx  FileUpload.tsx  UploadButton.tsx
powerup-api/: .env  Cargo.toml
powerup-api/src/: main.rs  transaction.rs
powerup/routes/: _app.tsx
routes/: _app.tsx  about.tsx  index.tsx
static/: style.css  style1.css
