[package]
name = "powerup-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
tokio = { version = "1.28", features = ["full"] }
thor-devkit = "0.1.0-beta.4"
hex = "0.4"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rand = "0.8"
bip39 = "2.0.0"
hdwallet = "0.4.1"
secp256k1 = "0.27.0"
actix-cors = "0.6.4"